--- a/package.json
+++ b/package.json
@@ -2,11 +2,12 @@
   "name": "ami-website",
   "version": "0.0.1",
   "scripts": {
-    "dev": "next",
+    "dev": "node server.js",
     "build": "next build",
-    "start": "next start"
+    "start": "NODE_ENV=production node server.js"
   },
   "dependencies": {
+    "express": "^4.16.4",
     "next": "7.0.2",
     "react": "16.5.2",
     "react-dom": "16.5.2"
