--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   },
   "dependencies": {
     "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "react-dom": "17.0.1",
+    "react-lazy-load-image-component": "^1.5.1"
   },
   "devDependencies": {
     "babel-eslint": "^10.1.0",
