--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
     "start": "next start"
   },
   "dependencies": {
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
+    "next": "^12.0.7",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-lazy-load-image-component": "^1.5.1"
   },
   "devDependencies": {
@@ -21,7 +22,6 @@
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.24.0",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "next": "^11.1.1",
     "sass": "^1.35.2"
   }
 }
